test_translator/tests/data/checkpoint_1/errors/17_empty_tests/tests.py
# This file is empty - no assertions at all
# Just comments
